[project]
name = "predictsheet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.40.1",
    "gspread>=6.2.1",
    "numpy>=2.2.6",
    "oauth2client>=4.1.3",
    "polars>=0.20.16",
    "scikit-learn>=1.6.1",
    "plotly>=5.22.0",
    "streamlit>=1.45.1",
]
